@@ -1,3 +1,9 @@
+*gitlab-shell-3.4.0 (22 Aug 2016)
+
+  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.4.0.ebuild:
+  dev-vcs/gitlab-shell:  added gitlab-shell-3.4.0. this is a dependency of
+  gitlab-ce-8.11.0
+
 *gitlab-shell-3.2.1 (27 Jul 2016)
 
   27 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-shell-3.2.1.ebuild:
